# aref-postman-mcp

./: .gitignore  Cargo.toml  README.md
src/: main.rs  server.rs
src/client/: collections.rs  environments.rs  http.rs  mod.rs  requests.rs  variables.rs
src/models/: collection.rs  environment.rs  mod.rs
src/tools/: collections.rs  common.rs  environments.rs  mod.rs  request_executor.rs  requests.rs  runner.rs  variables.rs
src/utils/: auth.rs  errors.rs  executor.rs  items.rs  mod.rs  vars.rs
