[package]
name = "postman-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Postman API integration with GitHub Copilot"

[dependencies]
rmcp = { version = "1.3.0", features = ["server", "transport-async-rw"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
